--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -12,6 +12,9 @@
   "KeyVault": {
     "BaseUrl": ""
   },
+  "AppConfig": {
+    "Endpoint": ""
+  },
   "ServiceBusQueues": {
     "BotDropoffReminderQueue": "bot-dropoff-reminder",
     "BotWashStartedQueue": "bot-wash-started",
