--- a/.github/workflows/mimosonk.yml
+++ b/.github/workflows/mimosonk.yml
@@ -65,9 +65,10 @@ jobs:
                   publish-profile: ${{ secrets.mimosonk_E838 }}
                   package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
             - name: Azure service principal login
-              uses: azure/login@v1
+              uses: azure/login@v2
               with:
                   creds: ${{ secrets.AZURE_CREDENTIALS }}
+                  subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
             - name: Update app configuration VERSION
               run: |
                   az appconfig kv set `
