Graph implementation WIP

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -25,7 +25,8 @@
     "BaseUrl": "https://mimosonk.hu"
   },
   "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/common/",
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "common",
     "ClientId": "",
     "AuthorizedApplications": []
   },
