Update ESLint configuration to include 'react-app' in extends and add 'react-hooks' to plugins

--- a/CarWash.PWA/ClientApp/.eslintrc.json
+++ b/CarWash.PWA/ClientApp/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   /* See all the pre-defined configs here: https://www.npmjs.com/package/eslint-config-defaults */
   "extends": [
+    "react-app",
     "eslint:recommended",
     "plugin:react/recommended",
     "prettier"
@@ -14,7 +15,7 @@
       "jsx": true
     }
   },
-  "plugins": ["react", "import", "jsx"],
+  "plugins": ["react", "react-hooks", "import", "jsx"],
   "env": {
     "amd": true,
     "browser": true,
