--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: Build and Test on PR
+name: Build, Analyze and Test on PR
 on:
     pull_request:
         branches:
@@ -14,19 +14,54 @@ jobs:
         runs-on: windows-latest
         steps:
             - uses: actions/checkout@v4
+              with:
+                fetch-depth: 0
             - name: Setup .NET SDK
               uses: actions/setup-dotnet@v3
               with:
                   dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+            - name: Set up JDK 17
+              uses: actions/setup-java@v4
+              with:
+                java-version: 17
+                distribution: 'zulu'            
+            - name: Cache SonarQube Cloud packages
+              uses: actions/cache@v4
+              with:
+                path: ~\sonar\cache
+                key: ${{ runner.os }}-sonar
+                restore-keys: ${{ runner.os }}-sonar
+            - name: Cache SonarQube Cloud scanner
+              id: cache-sonar-scanner
+              uses: actions/cache@v4
+              with:
+                path: .\.sonar\scanner
+                key: ${{ runner.os }}-sonar-scanner
+                restore-keys: ${{ runner.os }}-sonar-scanner
+            - name: Install SonarQube Cloud scanner
+              if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+              shell: powershell
+              run: |
+                New-Item -Path .\.sonar\scanner -ItemType Directory
+                dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
             - name: Restore PWA
               run: dotnet restore "${{ env.WORKING_DIRECTORY_PWA }}"
             - name: Restore Functions
               run: dotnet restore "${{ env.WORKING_DIRECTORY_FUNCTIONS }}"
-            - name: Build PWA
-              run: dotnet build "${{ env.WORKING_DIRECTORY_PWA }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-            - name: Build Functions
-              run: dotnet build "${{ env.WORKING_DIRECTORY_FUNCTIONS }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+            - name: Build and analyze
+              env:
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              shell: powershell
+              run: |
+                .\.sonar\scanner\dotnet-sonarscanner begin /k:"mark-szabo_carwash" /o:"mark-szabo-github" /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+                dotnet build "${{ env.WORKING_DIRECTORY_PWA }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+                dotnet build "${{ env.WORKING_DIRECTORY_FUNCTIONS }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+                .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
             - name: Test PWA
               run: dotnet test "CarWash.PWA.Tests" --collect:"XPlat Code Coverage"
             - name: Publish
               run: dotnet publish "${{ env.WORKING_DIRECTORY_PWA }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+            - name: SonarQube Scan JS
+              uses: SonarSource/sonarqube-scan-action@v5
+              env:
+                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
