--- a/CarWash.PWA/CarWash.PWA.csproj
+++ b/CarWash.PWA/CarWash.PWA.csproj
@@ -44,7 +44,8 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Graph" Version="5.90.0" />
+		<PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.1.0" />
+		<PackageReference Include="Microsoft.Graph" Version="5.91.0" />
 		<PackageReference Include="Microsoft.Identity.Client" Version="4.76.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
