Add dotnet-coverage tool configuration and update CI workflow for coverage reporting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
-  "files.exclude": {
-    "**/.vs": true,
-    "**/bin": true,
-    "**/obj": true
-  },
-  "azureFunctions.projectLanguage": "C#",
-  "azureFunctions.projectRuntime": "~4"
+    "files.exclude": {
+        "**/.vs": true,
+        "**/bin": true,
+        "**/obj": true
+    },
+    "azureFunctions.projectLanguage": "C#",
+    "azureFunctions.projectRuntime": "~4",
+    "sonarlint.connectedMode.project": {
+        "connectionId": "mark-szabo-github",
+        "projectKey": "mark-szabo_carwash"
+    }
 }
