--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,6 +9,7 @@ env:
     DOTNET_CORE_VERSION: 8.0.x
     WORKING_DIRECTORY_PWA: CarWash.PWA
     WORKING_DIRECTORY_FUNCTIONS: CarWash.Functions
+    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 jobs:
     build:
         runs-on: windows-latest
@@ -49,19 +50,16 @@ jobs:
             - name: Restore Functions
               run: dotnet restore "${{ env.WORKING_DIRECTORY_FUNCTIONS }}"
             - name: Build and analyze
-              env:
-                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
               shell: powershell
               run: |
-                .\.sonar\scanner\dotnet-sonarscanner begin /k:"mark-szabo_carwash" /o:"mark-szabo-github" /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+                .\.sonar\scanner\dotnet-sonarscanner begin /k:"mark-szabo_carwash" /o:"mark-szabo-github" /d:sonar.token="${{ env.SONAR_TOKEN }}" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
                 dotnet build "${{ env.WORKING_DIRECTORY_PWA }}" --configuration ${{ env.CONFIGURATION }} --no-restore
                 dotnet build "${{ env.WORKING_DIRECTORY_FUNCTIONS }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-                .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+                dotnet dotnet-coverage collect "dotnet test CarWash.PWA.Tests" -f xml -o "coverage.xml"
+                .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ env.SONAR_TOKEN }}"
             - name: Test PWA
               run: dotnet test "CarWash.PWA.Tests" --collect:"XPlat Code Coverage"
             - name: Publish
               run: dotnet publish "${{ env.WORKING_DIRECTORY_PWA }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
             - name: SonarQube Scan JS
               uses: SonarSource/sonarqube-scan-action@v5
-              env:
-                SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
