CodeQL  cs/web/missing-x-frame-options

--- a/CarWash.PWA/web.config
+++ b/CarWash.PWA/web.config
@@ -12,6 +12,7 @@
     </aspNetCore>
     <httpProtocol>
       <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
         <remove name="X-Powered-By" />
       </customHeaders>
     </httpProtocol>
