--- a/CarWash.Bot/web.config
+++ b/CarWash.Bot/web.config
@@ -5,6 +5,12 @@
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
     <aspNetCore processPath="dotnet" arguments=".\CarWash.Bot.dll" stdoutLogEnabled="false" stdoutLogFile="\\?\%home%\LogFiles\stdout" />
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+        <remove name="X-Powered-By" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
 <!--ProjectGuid: D85EBBFC-F5F1-4274-80B9-8FC3A4F304D8-->
