--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,8 @@ jobs:
               uses: actions/setup-dotnet@v3
               with:
                   dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+            - name: .NET Tool Restore
+              run: dotnet tool restore
             - name: Set up JDK 17
               uses: actions/setup-java@v4
               with:
