--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -66,6 +66,7 @@
         "eslint": "^8.57.1",
         "eslint-config-defaults": "^9.0.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-import": "^2.31.0",
         "globals": "^15.14.0",
         "prettier": "^3.4.2",
