Actions: Add permissions for id-token and contents
Azure Login GitHub Action requires id-token write permission in the pipeline

--- a/.github/workflows/mimosonk.yml
+++ b/.github/workflows/mimosonk.yml
@@ -3,6 +3,9 @@ on:
     push:
         branches:
             - main
+permissions:
+    id-token: write
+    contents: read
 env:
     AZURE_WEBAPP_NAME: mimosonk
     AZURE_WEBAPP_PACKAGE_PATH: CarWash.PWA\publish
