--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -40,6 +40,7 @@ jobs:
               with:
                   node-version: "20"
                   cache: "npm"
+                  cache-dependency-path: ${{ env.WORKING_DIRECTORY_PWA }}/ClientApp/package-lock.json
 
             - name: Install PWA npm dependencies
               run: npm ci
