--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -22,7 +22,7 @@ env:
 jobs:
     # The job MUST be called `copilot-setup-steps` or it will not be picked up by Copilot.
     copilot-setup-steps:
-        runs-on: windows-latest
+        runs-on: ubuntu-latest
 
         # Copilot will be given its own token for its operations.
         permissions:
