Fix not available times time zone calculation

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -3,6 +3,7 @@
   "Garages": [],
   "Services": [],
   "Reservation": {
+    "TimeZone": "Europe/Budapest",
     "TimeUnit": 12,
     "UserConcurrentReservationLimit": 2,
     "MinutesToAllowReserveInPast": 120,
