--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -38,6 +38,7 @@
         "adal-angular": "^1.0.17",
         "ajv": "^8.17.1",
         "classnames": "^2.5.1",
+        "dayjs": "^1.11.18",
         "downloadjs": "^1.4.7",
         "eslint-plugin-jsx": "^0.1.0",
         "moment": "^2.30.1",
